2008-11-17  Étienne BERSAC  <bersace03@laposte.net>

	* contribute.fr.html:
	* download.ca.html:
	* download.de.html:
	* download.fr.html:
	* download.sv.html:
	* index.ca.html:
	* index.de.html:
	* index.fr.html:
	* index.sv.html:
	* screenshots.ca.html:
	* screenshots.de.html:
	* screenshots.fr.html:
	* screenshots.sv.html:

	Rename file from .CC.html to .html.CC for content negociation.

2008-11-13  Étienne BERSAC  <bersace03@laposte.net>

	* contribute.fr.html:
	* contribute.html:
	* download.ca.html:
	* download.de.html:
	* download.fr.html:
	* download.html:
	* download.sv.html:
	* index.ca.html:
	* index.de.html:
	* index.fr.html:
	* index.html:
	* index.sv.html:
	* screenshots.ca.html:
	* screenshots.de.html:
	* screenshots.fr.html:
	* screenshots.html:
	* screenshots.sv.html: Revert previous commit. Thanks to Olav
	VITTER for reenabling content negociation.

2008-11-13  Étienne BERSAC  <bersace03@laposte.net>

	* contribute.fr.html:
	* contribute.html:
	* download.ca.html:
	* download.de.html:
	* download.fr.html:
	* download.html:
	* download.sv.html:
	* index.ca.html:
	* index.de.html:
	* index.fr.html:
	* index.html:
	* index.sv.html:
	* screenshots.ca.html:
	* screenshots.de.html:
	* screenshots.fr.html:
	* screenshots.html:
	* screenshots.sv.html: Point explicitely menu to .html, because
	projects.gnome.org does not have content negociation.

2008-11-13  Étienne BERSAC  <bersace03@laposte.net>

	* contribute.fr.html:
	* contribute.html:
	* download.ca.html:
	* download.de.html:
	* download.fr.html:
	* download.html:
	* download.sv.html:
	* index.ca.html:
	* index.de.html:
	* index.fr.html:
	* index.html:
	* index.sv.html:
	* screenshots.ca.html:
	* screenshots.de.html:
	* screenshots.fr.html:
	* screenshots.html:
	* screenshots.sv.html: Moved to http://projects.gnome.org/. Strip
	HTML comments.
