@@ -1,3 +1,9 @@
+2008-11-17  Étienne Bersac  <bersace03@gmail.com>
+
+	* Makefile.am (page_SCRIPTS):
+
+	Updated filename in Makefile.am.
+
 2008-11-17  Étienne BERSAC  <bersace03@laposte.net>
 
 	* contribute.fr.html:
